BUG Nowrap for code [doc build]

--- a/doc/themes/scikit-learn-modern/static/css/theme.css
+++ b/doc/themes/scikit-learn-modern/static/css/theme.css
@@ -32,6 +32,7 @@ code {
   background-color: #ecf0f3;
   border-radius: 0.2rem;
   padding: 0.2rem;
+  white-space: nowrap;
 }
 
 nav {
